@@ -2,103 +2,67 @@
 
 <h3>Brief project history</h3>
 
-<p>FLINT has been developed since 2007 by a large number of people. Initially
-the library was started by David Harvey and William Hart. Later maintenance
-of the library was taken over solely by William Hart,
-who remained the project leader until 2022.
-</p>
+<p>FLINT has been developed since 2007 by a large number of people.
+Initially the library was started by David Harvey and William Hart.
+Later maintenance of the library was taken over solely by William Hart,
+who remained the project leader until 2022.</p>
 
-<p>FLINT 2.0 was a clean rewrite from scratch
-done around 2010 by William Hart, Sebastian Pancratz and Fredrik Johansson.
-Eventually, the 2.x series greatly expanded the scope of FLINT
-with new features such as finite fields (implemented by Mike Hansen) and
-multivariate polynomials (Daniel Schultz), just to mention two examples.
-</p>
+<p>FLINT 2.0 was a clean rewrite from scratch done around 2010 by William Hart,
+Sebastian Pancratz and Fredrik Johansson. Eventually, the 2.x series greatly
+expanded the scope of FLINT with new features such as finite fields
+(implemented by Mike Hansen) and multivariate polynomials (Daniel Schultz),
+just to mention two examples.</p>
 
-<p>
-FLINT 3.0, due for release in 2023, merges three spin-off projects
-which were previously maintained as separate
-libraries: Arb and Calcium (started by Fredrik Johansson in 2012 and 2020),
-and Antic (started by William Hart in 2013).
-The author list below includes people who contributed to those
-projects.
-</p>
+<p>FLINT 3.0, released in 2023, merged three spin-off projects which were
+previously maintained as separate libraries: Arb and Calcium (started by
+Fredrik Johansson in 2012 and 2020), and Antic (started by William Hart in
+2013). The author list below includes people who contributed to those projects.</p>
 
-<h3>List of authors</h3>
+<p>If you believe there are names missing or if some information is incorrect,
+please contact us. See also the
+<a href="https://github.com/flintlib/flint/graphs/contributors">automatically-generated</a>
+list of committers on GitHub.</p>
 
-<p>
-See also the <a href="https://github.com/flintlib/flint/graphs/contributors">automatically-generated</a> list of committers on GitHub.
-If your contribution to FLINT is not listed here or if any
-information is inaccurate, please
-contact the maintainer.
-</p>
+<h3>Current maintainers</h3>
+
+<ul>
+<li><a href="https://fredrikj.net/" rel="nofollow">Fredrik Johansson</a> (<a href="mailto:fredrik.johansson@gmail.com">fredrik.johansson@gmail.com</a>) (project leader since 2022)</li>
+<li><a href="https://albinahlback.gitlab.io/" rel="nofollow">Albin Ahlbäck</a> (<a href="mailto:albin.ahlback@gmail.com">albin.ahlback@gmail.com</a>)</li>
+</ul>
+
+<h3>Major contributors</h3>
 
 %AUTHORLIST
 
 <h3>Other contributors</h3>
 
+<p>The following people have contributed patches, bug reports, documentation
+improvements, or other significant support. The list is certainly incomplete.</p>
+
+%CONTRIBUTORLIST
+
+<h3>Other credits</h3>
+
 <ul>
 
-<li>Patches, bug reports and documentation improvements
-have also been made by Michael Abshoff,
-Didier Deshommes, Craig Citro, Timothy Abbot, Carl Witty, Gonzalo Tornaría,
-Jaap Spies, Kiran Kedlaya, William Stein, Kate Minola, Robert
-Bradshaw, Serge Torres, Dan Grayson, Martin Lee, Bob Smith, Antony Vennard,
-Frederic Chyzak, Julien Puydt, Dana Jacobsen, Michael Jacobson Jr.,
-Mike Stillman, Jan Englehardt, Jean-Pierre Flori, Jeroen Demeyer, Shi Bai,
-Qingwen Guan, Frithjof Schulze, Robert Baillie, Oleksandr Motsak, Hans
-Schoenemann, Janko Boehm, Ahmed Soliman, Francois Bissey, Anton Mellit, Daniel
-Roche, Denis Kryskov, Daniel Fabian, Julien Ospald, mgkurtz, Max Goldfar, Max
-Horn, lzmths, Volker Braun, Pascal Molin, Ralf Stehpan, Apoorv Mishra, Tobias
-Hansen, sourcekris, yuri@FreeBSD, vinklein, Michele Orru, Frederik Chapoton,
-Peter Frentrep, Eric Bray, Julian Ruth, Edgar Costa, Raphael Fourquet, John
-Palmieri, Srajan Garg, Peter Luschny, Dejan Latinovic, Dima
-Pasechnik, Ben Lorenz, Mahrud Sayrafi, Lars Kastner, Gregory Vanuxem, Ivan
-Tsybulin, Debian User, Matthias Koeppe, Pavel Holoborodko, Victor Shoup,
-Michael Orlitzky, Tethys Svensson, Jan Jancar, Erico Noguerira Rolim, math-gout,
-Ondřej Čertík, Andrew Booker, Alexander Kobel, Andreas Enge,
-Hrvoje Abraham, Francesco Biscani, Marcello Seri, Yuri Matiyasevich,
-Gianfranco Costamagna, David Einstein, Jerry James, Oscar Benjamin,
-Michiel de Wilde, Ricardo Buring, Håvard Damm-Johnsen,
-Tomás Oliveira e Silva, Fabian Gundlach, Josh Rickmar, Alexander Smirnov,
-and others.</li>
-
-<li>In addition Michael Abshoff, William Stein and Robert Bradshaw have
-contributed to the build system of FLINT.</li>
-
-<li>Michael Abshoff deserves special recognition for his help in
-resolving a number of difficult build issues which came to light as FLINT was
-incorporated into SAGE and for bringing numerous bugs to the attention of the
-FLINT maintainers. Michael regularly checked FLINT for memory leaks and
-corruption, which directly led to numerous issues being identified early!
-He also helped with setting up various pieces of infrastructure for the FLINT
-project.</li>
-
-<li>Numerous people have contributed to wrapping FLINT in Sage and
-debugging, including Mike Hansen, Jean-Pierre Flori, Burcin Erocal, Robert
-Bradshaw, Martin Albrecht, Sebastian Pancratz, Fredrik Johansson, Jeroen
-Demeyer, Clemens Heuberger and Leif Lionhardy, amongst others.</li>
-
-<li>Some code (notably longlong.h and clz_tab.c) has been used from
-the GMP library, whose main author is Torbjorn Granlund.
-FLINT also includes code from the MPFR library
-developed by Guillaume Hanrot, Vincent Lefèvre, Patrick Pélissier, Philippe Théveny, Paul Zimmermann and others.
-</li>
+<li>The <a href="https://portal.cfarm.net/">cfarm compile farm</a> project has generously
+provided FLINT developers access to machines for
+architecture-specific testing.</li>
 
 <li>
-The <a href="https://portal.cfarm.net/">cfarm compile farm</a> project has generously
-provided FLINT developers access to machines for
-architecture-specific testing.
+Some code (notably longlong.h and clz_tab.c) has been used from the GMP library,
+whose main author is Torbjorn Granlund. FLINT also includes code from the MPFR
+library developed by Guillaume Hanrot, Vincent Lefèvre, Patrick Pélissier,
+Philippe Théveny, Paul Zimmermann and others. 
 </li>
 
 </ul>
-
 
 <h3>Citing FLINT</h3>
 
 <p>A general citation of the following form is recommended:</p>
 
-<blockquote>The FLINT team. FLINT: Fast Library for Number Theory, 2023. Version 2.9.0, https://flintlib.org.</blockquote>
+<blockquote>The FLINT team. FLINT: Fast Library for Number Theory, 2023. Version 3.0.0, https://flintlib.org.</blockquote>
 
 <pre>
 @manual{flint,
@@ -106,7 +70,7 @@ architecture-specific testing.
     author = {The {FLINT} team},
     title = {{FLINT}: {F}ast {L}ibrary for {N}umber {T}heory},
     year = {2023},
-    note = {Version 2.9.0, \url{https://flintlib.org}}
+    note = {Version 3.0.0, \url{https://flintlib.org}}
 }
 </pre>
 
